# rom_jubertBB2_mpc_bebot

./: CMakeLists.txt  README.md  control_systems.cpp  decasteljau.cpp  decasteljau.h  delta_m.csv  delta_m_controlpoints.csv  delta_s.csv  delta_s_controlpoints.csv  delta_v.csv  delta_v_controlpoints.csv  main  main.cpp  plotting_bebot.py  q.csv  q_controlpoints.csv  state_space_matrices.cpp  state_space_matrices.h  theta.csv  theta_controlpoints.csv  w.csv  w_controlpoints.csv  z.csv  z_controlpoints.csv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros_auv_v1_sub_l1_bebot_cpp/include/ros_auv_v1_sub_l1_bebot_cpp/msg/: l1_adaptive_msg.hpp  optimization_parameters.h  optimization_parameters.hpp  optimization_result.hpp  optimization_status.h  optimization_status.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/ros_auv_v1_sub_l1_bebot_cpp/include/ros_auv_v1_sub_l1_bebot_cpp/msg/detail/: l1_adaptive_msg__builder.hpp  l1_adaptive_msg__functions.h  l1_adaptive_msg__rosidl_typesupport_fastrtps_cpp.hpp  l1_adaptive_msg__rosidl_typesupport_introspection_c.h  l1_adaptive_msg__struct.h  l1_adaptive_msg__type_support.c  l1_adaptive_msg__type_support.hpp  optimization_parameters__functions.c  optimization_parameters__rosidl_typesupport_introspection_c.h  optimization_parameters__struct.h  optimization_parameters__struct.hpp  optimization_parameters__type_support.cpp  optimization_parameters__type_support.h  optimization_parameters__type_support.hpp  optimization_result__builder.hpp  optimization_result__functions.c  optimization_result__functions.h  optimization_result__traits.hpp  optimization_result__type_support.c  optimization_result__type_support.cpp  optimization_result__type_support.h  optimization_result__type_support.hpp  optimization_status__builder.hpp  optimization_status__rosidl_typesupport_fastrtps_cpp.hpp  optimization_status__struct.hpp  optimization_status__traits.hpp  (+2 more)
install/ros_auv_v1_sub_l1_bebot_cpp/share/ros_auv_v1_sub_l1_bebot_cpp/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros_auv_v1_sub_l1_bebot_cpp/share/ros_auv_v1_sub_l1_bebot_cpp/cmake/: ament_cmake_export_include_directories-extras.cmake  ros_auv_v1_sub_l1_bebot_cppConfig.cmake  ros_auv_v1_sub_l1_bebot_cpp__rosidl_generator_cppExport.cmake  ros_auv_v1_sub_l1_bebot_cpp__rosidl_typesupport_cExport.cmake  ros_auv_v1_sub_l1_bebot_cpp__rosidl_typesupport_cppExport-debug.cmake  ros_auv_v1_sub_l1_bebot_cpp__rosidl_typesupport_introspection_cExport-debug.cmake  ros_auv_v1_sub_l1_bebot_cpp__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/ros_auv_v1_sub_l1_bebot_cpp/share/ros_auv_v1_sub_l1_bebot_cpp/msg/: OptimizationParameters.idl  OptimizationParameters.msg  OptimizationResult.idl  OptimizationResult.msg  OptimizationStatus.idl
log/: latest_build
msg/: auvdata.msg
src/: L1_adaptive_node.cpp  L1_adaptive_node_no_msg.cpp  buffer_node.cpp  control_systems.h  printing_node.cpp  publisher_node.cpp  subscriber_node.cpp
(+2 files in other folders)
